# chaotic-inventory-opt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: appendix.md  proofs.md  theory.md
experiments/configs/: classical.yaml  fcio.yaml
experiments/multi_sku/: run.py
experiments/single_sku/: run.py
notebook/m5/: 01_load_m5.ipynb  02_single_sku_analysis.ipynb  03_classical_vs_fcio.ipynb  04_multi_sku_network.ipynb  05_cross_sku_generalization.ipynb
src/chaotic_inventory_opt/: __init__.py
src/chaotic_inventory_opt/chaos/: __init__.py  entropy.py  lyapunov.py  recurrence.py
src/chaotic_inventory_opt/control/: __init__.py  classical.py  fcio.py  network.py
src/chaotic_inventory_opt/core/: __init__.py  cost.py  dynamics.py  inventory_system.py
src/chaotic_inventory_opt/evaluation/: __init__.py  performance.py  robustness.py  stability.py
src/chaotic_inventory_opt/fractal/: __init__.py  hurst.py  rs_analysis.py  wavelets.py
src/chaotic_inventory_opt/regimes/: __init__.py  classifier.py
src/chaotic_inventory_opt/rl/: __init__.py  agent.py  env.py  reward.py
src/chaotic_inventory_opt/utils/: __init__.py  rolling.py  validation.py
